tweaked for personal use

--- a/src/main/res/layout/post_header_toolbar.xml
+++ b/src/main/res/layout/post_header_toolbar.xml
@@ -75,6 +75,7 @@
 			android:padding="12dp"
 			android:background="?rrThemedButtonSelector"
 			android:contentDescription="@string/action_reply"
+			android:visibility="gone"
 			android:src="?rrIconReply"/>
 
 	<ImageButton
@@ -84,6 +85,7 @@
 			android:padding="12dp"
 			android:background="?rrThemedButtonSelector"
 			android:contentDescription="@string/action_share"
+			android:visibility="gone"
 			android:src="?rrIconShare"/>
 
 	<ImageButton
